# radwall

./: README.md  bun.lockb  package-lock.json  package.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: draw.rs  main.rs  wallpaper.rs
src/lib/: Home.svelte
