[package]
name = "radwall"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wallpaper = { version = "3.2.0", features = ["from_url"] }
rand = "0.8.5"
reqwest = "0.11.1"
image ="0.24.7"
rusttype = "0.9.2"
imageproc = "0.23.0"
font-kit = "0.12.0"
tokio = { version = "1", features = ["full"] }
png = "0.17.10"
jpeg-encoder = "0.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
